--- a/pydantic.ipynb
+++ b/pydantic.ipynb
@@ -301,6 +301,128 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name='Ananth Natarajan' mail='ananth@ai.com'\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pydantic import BaseModel, EmailStr, field_validator\n",
+    "\n",
+    "\n",
+    "class Owner(BaseModel):\n",
+    "    name : str\n",
+    "    mail : EmailStr\n",
+    "\n",
+    "    @field_validator('name')\n",
+    "    @classmethod\n",
+    "    def name_must_contain_space(cls, v):\n",
+    "        if ' ' not in v:\n",
+    "            raise ValueError('Owner name must contain space')\n",
+    "        return v.title()\n",
+    "    \n",
+    "\n",
+    "try:\n",
+    "    owner = Owner(name='ananth natarajan', mail='ananth@ai.com')\n",
+    "    print(owner)\n",
+    "except ValueError as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Model validators - used to validate before and after the field validators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name='ananth natarajan' mail='ananth@ai.com'\n",
+      "1 validation error for Owner\n",
+      "  Value error, password should not be included [type=value_error, input_value={'name': 'ananth nataraja...om', 'password': '1234'}, input_type=dict]\n",
+      "    For further information visit https://errors.pydantic.dev/2.10/v/value_error\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pydantic import BaseModel, EmailStr, model_validator, ValidationError\n",
+    "from typing import Any\n",
+    "\n",
+    "class Owner(BaseModel):\n",
+    "    name : str\n",
+    "    mail : EmailStr\n",
+    "\n",
+    "    @model_validator(mode='before')\n",
+    "    @classmethod\n",
+    "    def check_for_sensitivedata(cls, data: Any) -> Any:\n",
+    "        if isinstance(data, dict):\n",
+    "            if 'password' in data:\n",
+    "                raise ValueError('password should not be included')\n",
+    "            if 'card_number' in data:\n",
+    "                raise ValueError('card number should not be included')\n",
+    "        return data\n",
+    "    \n",
+    "\n",
+    "    @model_validator(mode='after')\n",
+    "    def name_must_contain_space(self):\n",
+    "        if ' ' not in self.name:\n",
+    "            raise ValueError('Owner name must contain space')\n",
+    "        return self\n",
+    "    \n",
+    "owner = Owner(name='ananth natarajan', mail='ananth@ai.com')\n",
+    "print(owner)\n",
+    "try:\n",
+    "    owner = Owner(name='ananth natarajan', mail='ananth@ai.com', password='1234')\n",
+    "except ValidationError as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fields - used to add the metadata and costomize to the field of models."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name='Ananth'\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pydantic import BaseModel, Field\n",
+    "\n",
+    "class User(BaseModel):\n",
+    "    name : str = Field(default='Ananth')\n",
+    "\n",
+    "user = User()\n",
+    "print(user)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
