--- a/pydantic.ipynb
+++ b/pydantic.ipynb
@@ -423,6 +423,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "userid='2d6194cefae244d49004b4bae9c6edb2'\n"
+     ]
+    }
+   ],
+   "source": [
+    "from uuid import uuid4\n",
+    "from pydantic import BaseModel, Field\n",
+    "\n",
+    "class User(BaseModel):\n",
+    "    userid :int = Field(default_factory=lambda:uuid4().hex) #used to create the dynamic id on the fly.\n",
+    "\n",
+    "user = User()\n",
+    "print(user)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Field aliases - For validation and serialization, you can define an alias for a field."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
